Escher CMS Change History
=========================

Version 0.9.2 [TBD]
	integrated branch management: production, staging and development branches
	support for separate read/write databases
	drag & drop ordering of pages

Version 0.9.1 [not released]
	miscellaneous bug fixes
	enhanced password security (PHPass integrated)
	added query plugin
	added "private" attribute to <et:core:scope> tag
	synced to changes in Spark/Plug's authentication model (using SparkHasher)
	synced to changes in Spark/Plug's exception handling model
	eliminated "meta" namespace and tags; added tags: <et:pages:meta>, <et:images:meta>, <et:files:meta>, <et:links:meta>
	can associate custom metadata with images, files and links
	form plugin: allow setting default values for multiple checkboxes ("default" attribute now accepts comma-delimited list)
	added missing semicolons in some inline styles of sample site
	eliminated one level of directory hierachy in sparkplug directory
	.htaccess: moved use of header directive inside check for enabled headers module

Version 0.9.0 [2010-11-20]
	Initial Release
	Requires Spark/Plug v1.0.0