@@ -5,6 +5,8 @@ Version 0.9.2 [TBD]
 	integrated branch management: production, staging and development branches
 	support for separate read/write databases
 	drag & drop ordering of pages
+	new tags to assist with navigation previous/next links when iterating items
+	new default template
 
 Version 0.9.1 [not released]
 	miscellaneous bug fixes
